 . Demos: Texture2dDemo shows how to load PVR images (issue #112)
 . Director: OpenGLview is attached to a given UIView/UIWindow (issue #180)
 . Director: winSize returns a CGSize (not a CGRect) (issue #159)
 . Director: added FastDirector (issue #145)
 . Director: dispatch missing events in main loop (issue #146)
 . Director: renamed runScene with runWithScene (issue #194)
 . Effects: Added Effects support (Grid and TiledGrid) (issue #183)
 . Experimental: Added StreakDemo (issue #171)
 . Menu: aligItemsVerticallyOld removed. (issue #196)
 . MenuItemFont: assign correct size and documented isEnabled (issue #132)
 . Sprite: initWithPVRTCFile is deprecated. will be removed in v0.8 (issue #197)
 . Texture: Support for full PVRTC (issue #112)
 . Texture: Easier to set Alias and/or AntiAlias texture parameters (issue #135 and issue #47)
 . Transitions: added new transitions: 
	 SplitRowsTransition, SplitColsTransition, TurnOffTilesTransition,
	 FadeTRTransition, FadeBLTransition, FadeUpTransition, FadeDownTransition
     (issue #187)

 
version 0.6.3 - 28-Jan-2009
 . Actions: ScaleTo & ScaleBy supports X and Y factors (issue #156)
 . Actions: Added collections of Ease Actions (issue #157)
 . Chipmunk: cpFlaot is a float, not a double (issue #130)
 . CocosNode: fixed absolutePosition (issue #140)
 . CocosNode: unschedule timers only when running (issue #142)
 . CocosNode: prevents crash under certain circumstances while executing actions (issue #141)
 . Demos: Added Texture2dDemo example (issue #169)
 . Demos: SpritesDemo has an improved Accelerate example (issue #168)
 . Demos: ParticlesDemo has the Rain Particle example (issue #136)
 . Demos: Added EaseDemo showing all the ease capabilities (issue #158)
 . Director: allow cleanup when deallocing the director (issue #144)
 . Director: avoid useless GL commands when displaying FPS (issue #162)
 . Director: possibility to change the DepthBuffer size (issue #160)