@@ -185,6 +185,12 @@ float randfloat() {
 	[[TextureMgr sharedTextureMgr] removeAllTextures];
 }
 
+// next delta time will be zero
+-(void) applicationSignificantTimeChange:(UIApplication *)application
+{
+	[[Director sharedDirector] setNextDeltaTimeZero:YES];
+}
+
 - (void) dealloc
 {
 	[window release];
