@@ -322,4 +322,10 @@ Class restartAction()
 	[[TextureMgr sharedTextureMgr] removeAllTextures];
 }
 
+// next delta time will be zero
+-(void) applicationSignificantTimeChange:(UIApplication *)application
+{
+	[[Director sharedDirector] setNextDeltaTimeZero:YES];
+}
+
 @end
